--- a/config/message.config.json
+++ b/config/message.config.json
@@ -96,11 +96,11 @@
             "text": "Бюджет на покупку\n\nВажно ! Бюджет покупки – это не стоимость автомобиля и не сумма, которая будет обязательно потрачена. Бюджет – это ориентир суммы, в пределах которой будет поиск подходящего автомобиля."
         },
         "agent_appl_success": {
-            "text": "Спасибо ! Ваша заявка принята в работу. ",
+            "text": "Ваша заявка принята в работу.",
             "button_rows": [{
                 "buttons": [
                     {
-                        "text": "Оставить новую заявку",
+                        "text": "Сформировать ещё одну (другую) заявку",
                         "command": "/start"
                     }
                 ]
@@ -163,7 +163,7 @@
             "button_rows": [{
                 "buttons": [
                     {
-                        "text": "Вернуться в меню",
+                        "text": "Задать ещё один вопрос",
                         "command": "/start"
                     }
                 ]
