--- a/config/message.config.json
+++ b/config/message.config.json
@@ -51,25 +51,25 @@
             "text": "Во время создания заявки произошла ошибка... Попробуйте позже"
         },
         "agent_fio_advisor": {
-            "text": "Укажите Ваши данные. Они необходимы для дальнейшего начисления вознаграждения (после оплаты клиентом инвойса).\nФИО (полностью)"  
+            "text": "Укажите (полностью) Ваши фамилию, Имя Отчество.(необходимо начисления вознаграждения после оплаты клиентом инвойса)."  
         },
         "agent_fio_agent": {
-            "text": "Укажите Ваши данные. Они необходимы для дальнейшего начисления вознаграждения (после оплаты клиентом инвойса).\nФИО (полностью)"  
+            "text": "Укажите (полностью) Ваши фамилию, Имя Отчество.(необходимо начисления вознаграждения после оплаты клиентом инвойса)."  
         },
         "agent_phone_advisor": {
-            "text": "Контактный телефон(в формате 7ХХХХХХХХХ)\nНомер нужен для авторизации, проверка защиты от ботов, благодарим за понимание"  
+            "text": "Контактный телефон(в формате 7ХХХХХХХХХ)\n(для авторизации и защиты от ботов)"  
         },
         "agent_fio_phone": {
-            "text": "Контактный телефон(в формате 7ХХХХХХХХХ)\nНомер нужен для авторизации, проверка защиты от ботов, благодарим за понимание"  
+            "text": "Контактный телефон(в формате 7ХХХХХХХХХ)\n(для авторизации и защиты от ботов)"  
         },
         "agent_person_name": {
-            "text": "Укажите данные клиента для того, чтобы наш менеджер мог с ним связаться:\n\nФИО:"
+            "text": "Укажите данные Вашего клиента, чтобы менеджер мог с ним связаться:\n\nФИО:"
         },
         "agent_person_phone": {
-            "text": "Контактный телефон(в формате 7ХХХХХХХХХ)"
+            "text": "Контактный телефон клиента (в формате 7ХХХХХХХХХ)"
         },
         "agent_country": {
-            "text": "Если клиент сообщил вам характеристики автомобиля, который хочет, укажите их ниже. Это поможет нам в переговорах с ним\nСтрана (Япония, Корея, Китай)" ,
+            "text": "Если клиент сообщил Вам характеристики автомобиля, который планирует приобрести, укажите их ниже. Это поможет нам в переговорах с ним.\nСтрана (Япония, Корея, Китай)" ,
             "button_rows": [
                 {
                     "buttons": [
@@ -93,7 +93,7 @@
             "text": "Характеристики автомобиля(«марка, модель, год и др.»)"
         },
         "agent_budget": {
-            "text": "Бюджет на покупку\n\nВажно ! Бюджет покупки – это не стоимость автомобиля и не сумма, которая будет обязательно потрачена. Бюджет – это ориентир суммы, в пределах которой будет поиск подходящего автомобиля."
+            "text": "Бюджет на покупку\n\nВажно ! Бюджет покупки – это ориентир суммы, в пределах которой будет подбор подходящего автомобиля. Когда у клиента большой или достаточный бюджет, это даёт бОльший выбор хороших вариантов, чем в случае ограниченного  (недостаточного)  бюджета."
         },
         "agent_appl_success": {
             "text": "Ваша заявка принята в работу.",
@@ -110,7 +110,7 @@
             "text": "Укажите данные клиента для подготовки договора:\n\nФИО (полностью)"
         },
         "advisor_person_phone": {
-            "text": "Контактный телефон» в формате 7ХХХХХХХХХ\n\nНомер нужен для авторизации, проверка защиты от ботов, благодарим за понимание"
+            "text": "Контактный телефон клиента (в формате 7ХХХХХХХХХ)\n\nНомер нужен для авторизации, проверка защиты от ботов, благодарим за понимание"
         },
         "advisor_person_email": {
             "text": "Эл. почта"
@@ -147,7 +147,7 @@
             "text": "Год выпуска"
         },
         "advisor_person_budget": {
-            "text": "Бюджет на покупку\n\nВажно ! Бюджет покупки – это не стоимость автомобиля и не сумма, которая будет обязательно потрачена. Бюджет – это ориентир суммы, в пределах которой будет поиск подходящего автомобиля."
+            "text": "Бюджет на покупку\n\nВажно ! Бюджет покупки – это ориентир суммы, в пределах которой будет подбор подходящего автомобиля. Когда у клиента большой или достаточный бюджет, это даёт бОльший выбор хороших вариантов, чем в случае ограниченного  (недостаточного)  бюджета."
         },
         "advisor_person_additional_info": {
             "text": "Доп. информация (комплектация, состояние, цвет, пробег и т.д)"
