fix msgs text and btns for check subsrtn step

--- a/config/message.config.json
+++ b/config/message.config.json
@@ -30,7 +30,7 @@
             ]
         },
         "subscribing": {
-            "text": "Вы подписаны на наш канал «Авто Море» ?",
+            "text": "Вы подписаны на наш канал «Авто Море» @automorevlad ?",
             "button_rows": [{
                 "buttons": [
                     {
@@ -45,7 +45,19 @@
             }]
         },
         "no_subscription": {
-            "text": "К сожалению, мы не видим Вас среди подписчиков канала. Вам необходимо подписаться"  
+            "text": "К сожалению, мы не видим Вас среди подписчиков канала. Для продолжения работы (сотрудничества с нами) , Вам необходимо подписаться @automorevlad",
+            "button_rows": [{
+                "buttons": [
+                    {
+                        "text": "Да",
+                        "command": "/subscibed_yes"
+                    },
+                    {
+                        "text": "Нет",
+                        "command": "/subscibed_no"
+                    }
+                ]
+            }]
         },
         "error": {
             "text": "Во время создания заявки произошла ошибка... Попробуйте позже"
