change questions table add phone number step

--- a/config/message.config.json
+++ b/config/message.config.json
@@ -170,6 +170,9 @@
         "question_greeting": {
             "text": "Опишите интересующий вас вопрос"
         },
+        "question_phone": {
+            "text": "Ваш номер телефона (в формате 7ХХХХХХХХХ)\n\nНомер нужен для авторизации, проверка защиты от ботов, благодарим за понимание"
+        },
         "question_success": {
             "text": "Ваш вопрос успешно доставлен",
             "button_rows": [{
